--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,14 @@ chardet==3.0.4
 Django==3.0.5
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
+Faker==4.0.3
 idna==2.9
 Pillow==7.1.2
 PyJWT==1.7.1
+python-dateutil==2.8.1
 pytz==2020.1
 requests==2.23.0
+six==1.14.0
 sqlparse==0.3.1
+text-unidecode==1.3
 urllib3==1.25.9
